--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+  <li data-ns-test="shoppingList">New laptop</li>
+  <li data-ns-test="shoppingList">Gaming console</li>
+  <li data-ns-test="shoppingList">Wireless headphones</li>
+</ol>
+
+	<ul>
+  <li data-ns-test="holidayList">Santorini, Greece</li>
+  <li data-ns-test="holidayList">Kyoto, Japan</li>
+  <li data-ns-test="holidayList">Bora Bora, French Polynesia</li>
+</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
